[package]
edition = "2021"
name = "upward"
version = "0.1.1"
description = "A utility for updating your background using beautiful, permissively licensed images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = {version = "3", features = ["from_url"]}

[profile.release]
strip = true